# tic_tac_toe_game

./: CMakeLists.txt  Makefile  README.md  addons.c  addons.h  client.c  client.h  game_logic.c  game_logic.h  main.c  server.c  server.h  shared_data.c  shared_data.h  shared_names.c  shared_names.h  shm.c  shm.h  socket_manager.c  socket_manager.h
